fix links (hopefully),  prettify author sidebar for blog posts

--- a/_posts/2018-07-05-BUCS-2018.md
+++ b/_posts/2018-07-05-BUCS-2018.md
@@ -7,24 +7,19 @@ tags:
   - BUCS
   - Meet Reports
 
-gallery:
-  - image_path: /assets/images/varsity_2020/2.jpg
-  - image_path: /assets/images/varsity_2020/3.jpg
-  - image_path: /assets/images/varsity_2020/4.jpg
-  - image_path: /assets/images/varsity_2020/5.jpeg
-  - image_path: /assets/images/varsity_2020/6.jpeg
-  - image_path: /assets/images/varsity_2020/7.jpeg
 ---
 # A Tremendous Weekend of Lifting for CUPLC. Both Men's and Women's Teams Qualified for University Worlds in July, with the Men's Team Placing 1st in Britain
 
+{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/BUCS_2018" %}
+
 <figure>
-  <img src="/assets/images/BUCS_2018/1.jpg">
+  <img src="{{ image_path }}/1.jpg">
   <figcaption>Captain-bae</figcaption>
 </figure>
 
 For video footage see CUPLC’s Instagram, where you can see the live updates which were posted throughout the days.
 
-You can find them here: (Day 1 - Day 2 - Day 3 - Day 4)
+You can find them here: ([Day 1](https://www.instagram.com/stories/highlights/17873892859207656/?hl=en)- [Day 2](https://www.instagram.com/stories/highlights/17905302037153299/?hl=en) - [Day 3](https://www.instagram.com/stories/highlights/17906047234160547/?hl=en) - [Day 4](https://www.instagram.com/stories/highlights/17910741772139276/?hl=en))
 
 Note that this year CUPLC introduced club colours for British Unis – a 300+ award and 400+ award for those who achieved 300 and 400 wilks and upwards respectively. For many of the lifters it was their first real British powerlifting competition and everyone did exceeding well.
 
@@ -32,7 +27,7 @@ Note that this year CUPLC introduced club colours for British Unis – a 300+ aw
 7am weigh-in made for an early start to day 1. Two cars made their way towards Moulton College early this morning – the ‘fun’ car with Suzanne driving Raghul, Henry and Remi (who was so dried up from his water cutting that he was barely functional, however the other 3 made up for the banter with the excellent driving playlist) and Salman driving Luke, Sujan and Tim. After an incident on the way where Salman’s classic racer-boy style driving caused heart-attack like symptoms in both parties, we all arrived safely. In true Suzie-style we were ridiculously early. We were met at the venue by Ben and Steve. Fortunately, everybody safely made weight. It was then time to ensure that Remi ‘The Cramp’ Rufus-Toye minimised his cramping by taking shots of salt. Warmups began with the 59s and 66s in their matching light blue CUPLC t-shirts.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/2.jpg">
+  <img src="{{ image_path }}/2.jpg">
   <figcaption>Matchy matchy</figcaption>
 </figure>
 
@@ -41,7 +36,7 @@ There was pandemonium on the 66 platform where the platform managers had decided
 Whilst this had been occurring, Steve, Henry, Ben and Luke had all been lifting, finishing on squats of 180kg, 200kg (at RPE4), 140kg and 152.5kg. Of course they were all in different flights which made it a nightmare to try and handle everyone, but in true team spirit everyone pulled together and looked after one another. The 66s were the first to finish, having only 2 flights. Tim hit a huge 172.5kg deadlift to give him 330 wilks. Raghul was up next in the second flight, ending up pulling a 210kg deadlift, trying for 217.5kg to go for first which unfortunately wasn’t there on the day. Fortunately for us, the next two lifters proceeded to also miss their third deadlifts, which resulted in Raghul placing first, with 422 wilks. Raghul, however, had been dragged off immediately after his third deadlift for drug testing which again resulted in Suzie running around trying to locate him for the medal presentation ceremony. In true #cuplclove style he immediately ran off afterwards to handle Sujan on deadlifts.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/3.jpg">
+  <img src="{{ image_path }}/3.jpg">
   <figcaption>The 66s - Raghul and Tim</figcaption>
 </figure>
 
@@ -51,18 +46,18 @@ Remi was next in a deadlift placing battle, having not had the day he’d wanted
 Unfortunately due to timings many of us were not able to stay and support the 74s and drivers had to get back to return the next day, but notably Raihan achieved the full blue standard with 375.97 wilks. Mikey also managed to not bomb out on his deadlifts after failing below his intended opener in the warmup room – NB this is not a scenario one should model oneself on. Notably, Jake also hit the 300+ colours standard, making some great progress after joining the club this year! Angus has also continued to make progress following the Texas Method religiously, hitting 375 wilks despite being ill the week before.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/4.jpg">
+  <img src="{{ image_path }}/4.jpg">
   <figcaption>The 59s - Remi and Sujan</figcaption>
 </figure>
 
 
 <figure>
-  <img src="/assets/images/BUCS_2018/5.jpg">
+  <img src="{{ image_path }}/5.jpg">
   <figcaption>The 83s featuring Suzie - how cute do we look all in matching tops?</figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/BUCS_2018/6.jpg">
+  <img src="{{ image_path }}/6.jpg">
   <figcaption>The 74s looking fly in their (mostly) CUPLC stash</figcaption>
 </figure>
 
@@ -72,19 +67,19 @@ Unfortunately due to timings many of us were not able to stay and support the 74
 Day 2 was the turn of the heavyweights (93s and 105s), of which CUPLC has very few, hence it was much easier to keep track of the lifters. Additionally, Steve, Jenni and Michelle came along to handle their respective other halves (Vikram, Adam and Ka Chun). Approximately 3 hours of sleep was had by Suzie and Sal, who also dressed up for their reffing debut for day 2 (see below), although no actual reffing was done as Suzie was allocated as MC for the day and Sal given the important job of running the spreadsheet for the platform. In classic LAdam style, he showed up late and missed his and Nat’s slot on the weigh-in list so they were forced to wait longer to rehydrate.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/7.jpg">
+  <img src="{{ image_path }}/7.jpg">
   <figcaption>Who wore it better?</figcaption>
 </figure>
 
 After everyone had safely made weight, the ceremonial eating commenced and of course Nikul could be found demolishing the classic post weigh in food of a fruit salad. With regards to lifting, ‘KC’ was up first, finishing on a 177.5kg squat. Next, LAdam ‘Level 3 PT’ Rochussen, Vikram ‘The Lifesaver’ Thakur and Nikul Patel who were all in the same flight, and finished on 165kg, 210kg and 210kg respectively. Meanwhile Nat West (the building society) was on the other platform having a mare with squats. He had confusingly been told that he was not allowed to low bar, so ended up with a hybrid bar PR of 197.5kg. Notably the day ended with Nikul making a huge 15kg deadlift PB and Vikram achieving the full blue standard! See the insta story for day 2 for some banshee-like screaming emulating from the ref’s table whilst our lifters are on.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/8.jpg">
+  <img src="{{ image_path }}/8.jpg">
   <figcaption>Our 93s and 105s</figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/BUCS_2018/9.jpg">
+  <img src="{{ image_path }}/9.jpg">
   <figcaption>Our 93s and 105s + Steve</figcaption>
 </figure>
 
@@ -93,13 +88,13 @@ After everyone had safely made weight, the ceremonial eating commenced and of co
 The next weekend came around and it was the turn of the women of CUPLC to take to the platform. First up on the day were the 52s and 57s. Ellie Bouttell went for a huge 9/9 performance, taking second in the 57s – emotional! Emily Coales showed up and made weight and took her first competition by storm, as did Amrita Panesar who achieved the 300+ club colours standard with a double bodyweight deadlift at her first meet! Shoutout also to Salman and Krishnaa who went along extra early to handle these lifters.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/10.jpg">
+  <img src="{{ image_path }}/10.jpg">
   <figcaption>Our 52s and 57s - Amrita, Emily and Ellie</figcaption>
 </figure>
 
 
 <figure>
-  <img src="/assets/images/BUCS_2018/11.jpg">
+  <img src="{{ image_path }}/11.jpg">
   <figcaption>Krish, Ellie and Suzie</figcaption>
 </figure>
 
@@ -109,12 +104,12 @@ Suzie, Lucy and Emma arrived later on for the midday weigh-in. Emma was first up
 
 
 <figure>
-  <img src="/assets/images/BUCS_2018/12.jpg">
+  <img src="{{ image_path }}/12.jpg">
   <figcaption>Our 63s - Emma, Suzanne and Lucy</figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/BUCS_2018/13.jpg">
+  <img src="{{ image_path }}/13.jpg">
   <figcaption>Everyone from day 3</figcaption>
 </figure>
 
@@ -123,18 +118,18 @@ Suzie, Lucy and Emma arrived later on for the midday weigh-in. Emma was first up
 The last day of the competition got off to a rather slow start, with Suzanne running on exactly 0 sleep after having over-caffeinated the day before and Salman also being exhausted and failing to get up. These events led to Salman receiving over 60 missed calls and Krish and Suzie driving round trying to remember where he lived so they could bang on his window. Meanwhile, the lifters for the day – Megan ‘quads bigger than yours’ McEveley, Michelle ‘the lightest 63 ever’ Shen, Jess Gurney (who had been recruited last minute from rugby) and Jenni Shuttleworth, had made it safely to the venue (along with KC and LAdam who had come along to handle). See insta story for various snaps of LAdam and Jenni being sickeningly cute and KC being ‘the best handler ever’ to Michelle. Michelle hit a massive 100kg squat complete with standard Suzie screaming. Jenni was named as the happiest lifter on the platform, bouncing on and smiling and/or laughing before every lift, and handled well by LAdam (although he was classically slow getting her next attempts in) to a huge 252.5kg total for her first comp! Jess put in a great performance at her first competition, handled by Krish. Sal and Suzie fought over who was to handle Meg, although Suzie was chosen Sal couldn’t help himself by stealing the thunder and the hug from the last deadlift celebration #salty. Although we can’t wholly blame Meg though, it was quite difficult to tell them apart in their matching outfits.
 
 <figure>
-  <img src="/assets/images/BUCS_2018/14.jpg">
+  <img src="{{ image_path }}/14.jpg">
   <figcaption>Who wore it better? v2.0</figcaption>
 </figure>
 
 
 <figure>
-  <img src="/assets/images/BUCS_2018/15.jpg">
+  <img src="{{ image_path }}/15.jpg">
   <figcaption>The 72s and 84s</figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/BUCS_2018/16.jpg">
+  <img src="{{ image_path }}/16.jpg">
   <figcaption>The dream team (and Meg's quads)</figcaption>
 </figure>
 
