migrate varsity reports

--- a/_posts/2018-07-05-bench-worlds-2018.md
+++ b/_posts/2018-07-05-bench-worlds-2018.md
@@ -1,7 +1,7 @@
 ---
 title: "Suzanne and Lucy head to Bench Press World Classics"
 date: 2018-07-05
-author: Suzanne
+author: Suzanne Goulder
 tags:
   - Meets
   - Meet Reports
