--- a/_posts/2018-07-05-BUCS-2018.md
+++ b/_posts/2018-07-05-BUCS-2018.md
@@ -1,7 +1,7 @@
 ---
 title: "CUPLC at British University Champsionships 2018"
 date: 2018-07-05
-author: Suzanne
+author: Suzanne Goulder
 tags:
   - Meets
   - BUCS
