steves programming info

--- a/_posts/2018-07-05-BUCS-2018.md
+++ b/_posts/2018-07-05-BUCS-2018.md
@@ -10,7 +10,7 @@ header:
   overlay_image: /assets/images/BUCS_2018/1.jpg
   teaser: /assets/images/BUCS_2018/1.jpg
 ---
-# A Tremendous Weekend of Lifting for CUPLC. Both Men's and Women's Teams Qualified for University Worlds in July, with the Men's Team Placing 1st in Britain
+## A Tremendous Weekend of Lifting for CUPLC. Both Men's and Women's Teams Qualified for University Worlds in July, with the Men's Team Placing 1st in Britain
 
 {% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/BUCS_2018" %}
 
