competitions page, placeholder committee images

--- a/_posts/2017-01-01-varsity-2017.md
+++ b/_posts/2017-01-01-varsity-2017.md
@@ -2,10 +2,10 @@
 title: "Varsity 2017"
 date: 2017-01-01
 author: Bilal Chughtai
+published: false
 tags:
   - Meets
   - Varsity
-  - Meet Reports
 
 header:
   overlay_image: /assets/images/varsity_2017/group.png
