--- a/_posts/2014-01-01-varsity-2014.md
+++ b/_posts/2014-01-01-varsity-2014.md
@@ -14,7 +14,7 @@ header:
 ---
 # Powerlifting Varsity win for CUPLC
 
-{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/varsity_2014" %}
+{% assign image_path = site.baseurl | append: "/assets/images/varsity_2014" %}
 
 ### [Results]({{image_path}}/results.xlsx){: .btn .btn--primary .btn--large .align-left}
 
