--- a/_posts/2016-09-30-uni-worlds-2016.md
+++ b/_posts/2016-09-30-uni-worlds-2016.md
@@ -10,7 +10,7 @@ tags:
 ## CUPLC were narrowly beaten by a formidable Ohio State team and officially become the second best student powerlifting club in the world.
 
 
-{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/uni_worlds_2016" %}
+{% assign image_path = site.baseurl | append: "/assets/images/uni_worlds_2016" %}
 
 <figure>
   <img src="{{ image_path }}/1.jpg">
