--- a/_posts/2017-01-01-varsity-2017.md
+++ b/_posts/2017-01-01-varsity-2017.md
@@ -14,6 +14,6 @@ header:
 ---
 # Powerlifting Varsity win for CUPLC
 
-{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/varsity_2015" %}
+{% assign image_path = site.baseurl | append: "/assets/images/varsity_2015" %}
 
 &nbsp;
