--- a/_posts/2018-07-05-BUCS-2018.md
+++ b/_posts/2018-07-05-BUCS-2018.md
@@ -12,7 +12,7 @@ header:
 ---
 ## A Tremendous Weekend of Lifting for CUPLC. Both Men's and Women's Teams Qualified for University Worlds in July, with the Men's Team Placing 1st in Britain
 
-{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/BUCS_2018" %}
+{% assign image_path = site.baseurl | append: "/assets/images/BUCS_2018" %}
 
 <figure>
   <img src="{{ image_path }}/1.jpg">
