--- a/_posts/2018-07-05-bench-worlds-2018.md
+++ b/_posts/2018-07-05-bench-worlds-2018.md
@@ -11,7 +11,7 @@ tags:
 
 Kitted out in GB kit, Suzie and Lucy headed to the World Classic Bench Press Championships in Vantaa, Finland. They also joined up with Zoe Clark from Oxford for a cute joint Oxbridge trip.
 
-{% assign image_path = site.url | append: "/" | append: site.baseurl | append: "/assets/images/bench_worlds_2018" %}
+{% assign image_path = site.baseurl | append: "/assets/images/bench_worlds_2018" %}
 
 <figure>
   <img src="{{ image_path }}/1.jpg">
