freshers changes by request of remi

--- a/_posts/2022-09-25-freshers-2022.md
+++ b/_posts/2022-09-25-freshers-2022.md
@@ -10,33 +10,16 @@ header:
   overlay_filter: "0.8"
   overlay_image: /assets/images/home_cover.jpg
   caption: "Varsity 2020"
-  teaser: assets/images/freshers_2022/leaflet1.png
+  teaser: assets/images/freshers_2022/leaflet2.png
 
 
 ---
 
 {% assign image_path = site.baseurl | append: "/assets/images/freshers_2022" %}
 
-[Sign Up Here](https://forms.gle/ajJwCDZmLwjAS1pV7/){: .btn .btn--primary .btn--large .align-center}
-
-# Flyers 
-
-<figure>
-  <img src="{{ image_path }}/leaflet1.png">
-</figure>
+[Sign up to our FRESHER's MAILING LIST here](https://forms.gle/ajJwCDZmLwjAS1pV7/){: .btn .btn--primary .btn--large .align-center}
+[Sign up for FULL CLUB MEMBERSHIP here](/membership/){: .btn .btn--primary .btn--large .align-center} 
 
 <figure>
   <img src="{{ image_path }}/leaflet2.png">
-</figure>
-
-<figure>
-  <img src="{{ image_path }}/poster1.png">
-</figure>
-
-<figure>
-  <img src="{{ image_path }}/poster2.png">
-</figure>
-
-<figure>
-  <img src="{{ image_path }}/poster3.png">
 </figure>
