- made logo without text transparent for header - updated the sign up page by adding the mailing list and getting rid of membership form

--- a/_posts/2023-09-13-freshers-2023.md
+++ b/_posts/2023-09-13-freshers-2023.md
@@ -1,7 +1,7 @@
 ---
-title: "Join CUPLC in 2022"
-date: 2022-09-25
-author: Bilal Chughtai
+title: "Join CUPLC in 2023"
+date: 2023-09-13
+author: Mani Ipchi
 layout: splash
 tags:
 header:
@@ -17,7 +17,8 @@ header:
 
 {% assign image_path = site.baseurl | append: "/assets/images/freshers_2022" %}
 
-[Sign up for FULL CLUB MEMBERSHIP here](/membership/){: .btn .btn--primary .btn--large .align-center} 
+[Sign up to the 2023-2024 mailing list here](https://forms.gle/NGa1tSu3yv5zmneF6){: .btn .btn--primary .btn--large .align-center} 
+<!-- [Sign up for FULL CLUB MEMBERSHIP here](/membership/){: .btn .btn--primary .btn--large .align-center}  -->
 
 <figure>
   <img src="{{ image_path }}/leaflet2.png">
