Add link to fresher page, cut out old term dates for leaflet

--- a/_posts/2023-09-13-freshers-2023.md
+++ b/_posts/2023-09-13-freshers-2023.md
@@ -15,11 +15,13 @@ header:
 
 ---
 
-{% assign image_path = site.baseurl | append: "/assets/images/freshers_2022" %}
+{% assign image_path = site.baseurl | append: "/assets/images/freshers_2023" %}
 
 [Sign up to the 2023-2024 mailing list here](https://forms.gle/NGa1tSu3yv5zmneF6){: .btn .btn--primary .btn--large .align-center} 
-<!-- [Sign up for FULL CLUB MEMBERSHIP here](/membership/){: .btn .btn--primary .btn--large .align-center}  -->
+
+[Sign Up for 2023-2024 membership here](https://forms.gle/nwCX9X2jzz9dMpfGA){: .btn .btn--primary .btn--large .align-center}
+
 
 <figure>
-  <img src="{{ image_path }}/leaflet2.png">
+  <img src="{{ image_path }}/leaflet_2023_temp.jpg">
 </figure>
